--- a/Lab1/sheet.css
+++ b/Lab1/sheet.css
@@ -27,6 +27,9 @@ nav ul {
 
 .azure {
     background-color: #EFF;
+}
+
+.border {
     border: 1px solid black;
     box-shadow: 1px 1px 1px black;
     padding: 0.5em 1em;
@@ -53,12 +56,14 @@ nav ul {
 }
 
 @media (max-width: 800px) {
+    body {
+        display: flex;
+        flex-direction: column;
+    }
     header, nav, aside, main, footer {
         position: static;
-        width: 93vw;
-        font-size: 3vw;
-    }
-    aside {
         float: none;
+        width: 87vw;
+        font-size: 3vw;
     }
 }
