--- a/Strona/views/admin.pug
+++ b/Strona/views/admin.pug
@@ -54,6 +54,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark(style='padding: 0.5rem 1rem;')
         a.nav-link(href='/admin')
           | Admin panel 
           span.sr-only (current)
+  div.navbar-brand
+    img#droptarget.dropzone(src="cart.jpg", alt="Cart", height="40px")
 form(style='margin: 2rem;')
   p
     strong New product
@@ -120,4 +122,5 @@ script.
   ctx.closePath();
   ctx.fill();
   ctx.stroke();
+  dragListener(true);
   displayProducts();
